RESOLVED FIXED264825
[WebGPU] webgpu:api,operation,buffers,* is not passing
https://bugs.webkit.org/show_bug.cgi?id=264825
Summary [WebGPU] webgpu:api,operation,buffers,* is not passing
Mike Wyrzykowski
Reported 2023-11-14 10:50:44 PST
[WebGPU] ArrayBuffers are not detached after calls to GPUBuffer.unmap Lack of detaching is blocking webgpu:api,operation,buffers,* from passing
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-14 10:51:12 PST
Mike Wyrzykowski
Comment 2 2023-11-15 15:35:36 PST
EWS
Comment 3 2023-11-17 04:31:37 PST
Committed 270882@main (98da47e2740e): <https://commits.webkit.org/270882@main> Reviewed commits have been landed. Closing PR #20564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.