[WebGPU] webgpu:api,operation,buffers,* is not passing https://bugs.webkit.org/show_bug.cgi?id=264825 rdar://118406537

Reviewed by Dan Glastonbury and Yusuke Suzuki.

The WebGPU specification prevents ArrayBuffers returned from getMappedRange from
being transferred via postMessage calls.

* LayoutTests/http/tests/webgpu/webgpu/api/operation/buffers/map-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/operation/buffers/map_ArrayBuffer-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/operation/buffers/map_detach-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/operation/buffers/map_oom-expected.txt:
Add passing expectations.

* Source/JavaScriptCore/runtime/ArrayBuffer.cpp:
(JSC::ArrayBuffer::transferTo):
Use helper.

* Source/JavaScriptCore/runtime/ArrayBuffer.h:
(JSC::ArrayBuffer::isDetachable const):
Add helper member function to determine if an ArrayBuffer can be detached.

* Source/WebCore/Modules/WebGPU/GPUBuffer.cpp:
(WebCore::makeArrayBuffer):
(WebCore::GPUBuffer::internalUnmap):
Pin and unpin the buffer to prevent transferring.

* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::SerializedScriptValue::create):
Throw a type error if we try to transfer an ArrayBuffer which can not
be detached.

Canonical link: https://commits.webkit.org/270882@main